--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,17 +2,19 @@ version: '3'
 
 services:
   ckan-server:
+    container_name: ${RHEL_CONTAINER_NAME}
     build:
       context: .
-      dockerfile: docker/rhel-9.3/Dockerfile
+      dockerfile: docker/${OS_TYPE}/Dockerfile
+    env_file:
+      - docker/.env
     logging:
       driver: "json-file"
       options:
           max-size: "100m"
           max-file: "10"
     ports:
-      - "8002:5000"
-      - "8081:22"
-      - "8984:8983"
-      - "8980:80"
+      - ${CKAN_PORT_HOST}:${CKAN_PORT}
+      - ${SSH_PORT_HOST}:${SSH_PORT}
+      - ${NGINX_PORT_HOST}:${NGINX_PORT}
    
