--- a/playbooks/rhel-9.3/host_vars/production_01.yml
+++ b/playbooks/rhel-9.3/host_vars/production_01.yml
@@ -1,10 +1,16 @@
 --- 
+
+### Ansible connection  #########################################
+## If you are running the playbook on the same machine, you can use the "local" connection instead of "ssh"
+ansible_connection: ssh
+
 ### Host  #########################################
 server_name: production
 ansible_host: localhost
 ansible_user: ckan
 ansible_port: 22
 ansible_ssh_pass: yourpassword
+ansible_ssh_private_key_file: /home/ckan/.ssh/authorized_keys
 
 ### CKAN variables #########################################
 ckan_version: ckan-2.9.10
