--- a/playbooks/rhel-9.3/host_vars/production_01.yml
+++ b/playbooks/rhel-9.3/host_vars/production_01.yml
@@ -6,11 +6,11 @@ ansible_connection: ssh
 
 ### Host  #########################################
 server_name: production
-ansible_host: localhost
+ansible_host: 192.168.68.109
 ansible_user: ckan
 ansible_port: 22
 ansible_ssh_pass: yourpassword
-ansible_ssh_private_key_file: /home/ckan/.ssh/authorized_keys
+ansible_ssh_private_key_file: docker/ssh/keys/ssh
 
 ### CKAN variables #########################################
 ckan_version: ckan-2.9.10
