Update .env.example and Dockerfile for CKAN server configuration

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # Base
 ANSIBLE_DIR=/opt
+OS_TYPE=rhel-9.3
 
 # Container names
 RHEL_CONTAINER_NAME=rhel-test
 
 # Host Ports
 SSH_PORT_HOST=8022
-CKAN_PORT_HOST=8050
-NGINX_PORT_HOST=8082
+CKAN_PORT_HOST=8005
+NGINX_PORT_HOST=8008
 NGINX_SSLPORT_HOST=8043
 
 # Container Ports
@@ -18,3 +19,4 @@ NGINX_SSLPORT=443
 
 # CKAN
 CKAN_USER=ckan
+CKAN_USER_SSH_PWD=ckan
