--- a/playbooks/rhel-9.3/host_vars/production_01.yml
+++ b/playbooks/rhel-9.3/host_vars/production_01.yml
@@ -6,11 +6,10 @@ ansible_connection: ssh
 
 ### Host  #########################################
 server_name: production
-ansible_host: 192.168.68.109
+ansible_host: targethost
 ansible_user: ckan
 ansible_port: 22
-ansible_ssh_pass: yourpassword
-ansible_ssh_private_key_file: docker/ssh/keys/ssh
+ansible_ssh_pass: ckan
 
 ### CKAN variables #########################################
 ckan_version: ckan-2.9.10
