Refactor deployment configurations and remove unused files
- Create os folders for testing with docker. Add debian, ubuntu an rhel-8
- Improve README
- Add vars to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # Base
 ANSIBLE_DIR=/opt
-OS_TYPE=rhel-9.3
 
-# Container names
-RHEL_CONTAINER_NAME=rhel-test
+# Containers
+CONTAINER_RHEL_NAME=rhel-test
+CONTAINER_DEB_NAME=debian-test
+# Set the OS to test based on the available Dockerfiles: rhel/rhel-8, rhel/rhel-9, debian/debian-12, ubuntu/ubuntu-24
+CONTAINER_OS=rhel/rhel-9
 
 # Host Ports
 SSH_PORT_HOST=8022
