--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 config/tmp
 
 # SSH keys for docker
-docker/ssh/keys/*
-!docker/ssh/keys/README.md
+docker/.ssh/keys/*
+!docker/.ssh/keys/README.md
 
 # Environment
 .env
