Update container and OS names in .env.example and docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   ckan-server:
-    container_name: ${CONTAINER_RHEL_NAME}
+    container_name: ${CONTAINER_OS_NAME}
     build:
       context: .
       dockerfile: docker/${CONTAINER_OS}/Dockerfile
