--- a/playbooks/debian/debian-12/host_vars/production_01.yml
+++ b/playbooks/debian/debian-12/host_vars/production_01.yml
@@ -21,17 +21,17 @@ ckan_site_description: "Sample description for Your-Company's data management e.
 ### Database variables #########################################
 postgres_version: 15
 ckan_database: {
-  dbuser: "ckan_portal_user",
-  dbpassword: ">C4fMsJb.*Va-rV2",
-  dbname: "ckan_portal_db",
-  dbhost: "localhost",
+  ckan_db_user: "ckan_portal_user",
+  ckan_db_password: ">C4fMsJb.*Va-rV2",
+  ckan_db: "ckan_portal_db",
+  postgres_host: "localhost",
 }
 
 ckan_datastore: {
-  datastoreuser: "ckan_datastore_user",
-  datastorepassword: "DC4fMsJb+",
-  datastoredb: "ckan_datastore_db",
-  datastorehost: "localhost",
+  datastore_readonly_user: "ckan_datastore_user",
+  datastore_readonly_password: "DC4fMsJb+",
+  datastore_db: "ckan_datastore_db",
+  datastore_host: "localhost",
 }
 
 ### Solr Service #########################################
