--- a/playbooks/debian/debian-12/roles/database/tasks/main.yml
+++ b/playbooks/debian/debian-12/roles/database/tasks/main.yml
@@ -21,36 +21,36 @@
 
 - name: Create PostgreSQL User
   postgresql_user:
-    name: "{{ ckan_database.dbuser }}"
-    password: "{{ ckan_database.dbpassword }}"
+    name: "{{ ckan_database.ckan_db_user }}"
+    password: "{{ ckan_database.ckan_db_password }}"
     role_attr_flags: SUPERUSER 
     state: present
 
 - name: Create PostgreSQL Database
   postgresql_db:
-    name: "{{ ckan_database.dbname }}"
-    owner: "{{ ckan_database.dbuser }}"
+    name: "{{ ckan_database.ckan_db }}"
+    owner: "{{ ckan_database.ckan_db_user }}"
     encoding: UTF-8
     state: present
 
 - name: Grant db user access to db
   postgresql_privs:
     type: database
-    database: "{{ ckan_database.dbname }}"
-    roles: "{{ ckan_database.dbuser }}"
+    database: "{{ ckan_database.ckan_db }}"
+    roles: "{{ ckan_database.ckan_db_user }}"
     grant_option: false
     privs: all
 
 - name: Create datastore readonly user
   postgresql_user:
-    name: "{{ ckan_datastore.datastoreuser }}"
-    password: "{{ ckan_datastore.datastorepassword }}"
+    name: "{{ ckan_datastore.datastore_readonly_user }}"
+    password: "{{ ckan_datastore.datastore_readonly_password }}"
     role_attr_flags: NOSUPERUSER,NOCREATEDB,NOCREATEROLE,INHERIT,LOGIN,NOREPLICATION,NOBYPASSRLS
     state: present
 
 - name: Create datastore db own datastore read user
   postgresql_db:
-    name: "{{ ckan_datastore.datastoredb }}"
-    owner: "{{ ckan_datastore.datastoreuser }}"
+    name: "{{ ckan_datastore.datastore_db }}"
+    owner: "{{ ckan_datastore.datastore_readonly_user }}"
     encoding: UTF-8
     state: present
