--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ config/tmp
 docker/.ssh/keys/*
 !docker/.ssh/keys/README.md
 
+# SSH keys for Ansible
+playbooks/*/*/roles/common/tasks/files
+
 # Environment
 .env
 .vscode
+.vagrant
