--- a/vagrant/rhel/rhel-9/vagrantfile
+++ b/vagrant/rhel/rhel-9/vagrantfile
@@ -1,5 +1,40 @@
+# -*- mode: ruby -*-
+# vi: set ft=ruby :
+
+# All Vagrant configuration is done below. The "2" in Vagrant.configure
+# configures the configuration version (we support older styles for
+# backwards compatibility). Please don't change it unless you know what
+# you're doing.
 Vagrant.configure("2") do |config|
-    config.vm.box = "alvistack/rhel-9"
-    config.vm.provider "virtualbox" do |vb|
-        vb.memory = "4096"
-      end
+  # Use RHEL 9 as the base box
+  config.vm.box = "generic/rhel9"
+
+  # Create a public network, which generally matched to bridged network.
+  # Bridged networks make the machine appear as another physical device on
+  # your network.
+  config.vm.network "public_network"
+  
+  # # Create a private network, which allows host-only access to the machine
+  # # using a specific IP.
+  # config.vm.network "private_network", ip: "192.168.56.20"
+
+  # Disable synced folder (enabled by default, but we don't need it)
+  config.vm.synced_folder ".", "/vagrant", disabled: true
+
+  config.vm.hostname = "ckan-ansible-rhel9"
+
+  config.vm.provider "virtualbox" do |vb|
+    vb.gui = false
+  
+    vb.memory = "4096"
+    vb.cpus = "4"
+    
+    vb.name = "ckan-ansible-rhel9"
+  end
+
+  ## Uncomment the following lines to enable provisioning with Ansible. Windows is not supported.
+  # config.vm.provision "ansible" do |ansible|
+  #   ansible.playbook = "../../../playbooks/rhel/rhel-9/playbook.yml"
+  # end
+
+end
