Update SSH key paths in README and Dockerfile

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 config/tmp
 
 # SSH keys for docker
-docker/.ssh/keys/*
-!docker/.ssh/keys/README.md
+.ssh/keys/*
+!.ssh/keys/README.md
 
 # SSH keys for Ansible
 playbooks/*/*/roles/common/tasks/files
