--- a/vagrant/rhel/rhel-9/vagrantfile
+++ b/vagrant/rhel/rhel-9/vagrantfile
@@ -9,19 +9,17 @@ Vagrant.configure("2") do |config|
   # Use RHEL 9 as the base box
   config.vm.box = "generic/rhel9"
 
+
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
   config.vm.network "public_network"
-  
-  # # Create a private network, which allows host-only access to the machine
-  # # using a specific IP.
   # config.vm.network "private_network", ip: "192.168.56.20"
+  config.vm.hostname = "rhel9-test"
+  config.ssh.insert_key = false
 
   # Disable synced folder (enabled by default, but we don't need it)
   config.vm.synced_folder ".", "/vagrant", disabled: true
-
-  config.vm.hostname = "ckan-ansible-rhel9"
 
   config.vm.provider "virtualbox" do |vb|
     vb.gui = false
@@ -29,7 +27,7 @@ Vagrant.configure("2") do |config|
     vb.memory = "4096"
     vb.cpus = "4"
     
-    vb.name = "ckan-ansible-rhel9"
+    vb.name = "rhel9-test"
   end
 
   ## Uncomment the following lines to enable provisioning with Ansible. Windows is not supported.
