Update RHEL 9 Vagrantfile and setup scripts

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,7 @@
-# Base
-ANSIBLE_DIR=/opt
+#Keep the same values in the .env file and the .env.example file /ckan-ansible/playbooks/$ANSIBLE_PLAYBOOK_OS/host_vars/.
 
-# Containers
-# Set the OS to test based on the available Dockerfiles: rhel/rhel-8, rhel/rhel-9, debian/debian-12, ubuntu/ubuntu-24
-CONTAINER_OS=rhel/rhel-9
-CONTAINER_OS_NAME=rhel-test
+# CKAN
+CKAN_USER=ckan
 
 # Host Ports
 SSH_PORT_HOST=8022
@@ -12,12 +9,24 @@ CKAN_PORT_HOST=8005
 NGINX_PORT_HOST=8008
 NGINX_SSLPORT_HOST=8043
 
+# Test deployment
+# Ansible
+ANSIBLE_DIR=/opt
+# Set the OS to test based on the available Dockerfiles: rhel/rhel-8, rhel/rhel-9, debian/debian-12, ubuntu/ubuntu-24
+ANSIBLE_PLAYBOOK_OS=rhel/rhel-9
+ANSIBLE_CONFIG=$HOME/ckan-ansible/playbooks/$ANSIBLE_PLAYBOOK_OS/ansible.cfg
+
+# Containers
+CONTAINER_OS_NAME=rhel-test
+
 # Container Ports
 SSH_PORT=22
 CKAN_PORT=5000
 NGINX_PORT=80
 NGINX_SSLPORT=443
 
-# CKAN
-CKAN_USER=ckan
-CKAN_USER_SSH_PWD=ckan
+# Vagrant
+VAGRANT_SUDO_USER=vagrant
+VAGRANT_IP=192.168.56.20
+VAGRANT_RHEL_DEV_USER="user"
+VAGRANT_RHEL_DEV_PASSWORD="password"
