--- a/vagrant/rhel/rhel-9/vagrantfile
+++ b/vagrant/rhel/rhel-9/vagrantfile
@@ -9,14 +9,17 @@ Vagrant.configure("2") do |config|
   # Use RHEL 9 as the base box
   config.vm.box = "generic/rhel9"
 
-
   # Create a public network, which generally matched to bridged network.
   # Bridged networks make the machine appear as another physical device on
   # your network.
-  config.vm.network "public_network"
-  # config.vm.network "private_network", ip: "192.168.56.20"
+  #config.vm.network "public_network"
+  config.vm.network "private_network", ip: "192.168.56.20"
   config.vm.hostname = "rhel9-test"
-  config.ssh.insert_key = false
+
+  # Copy the playbook,.env and setup files to the VM ($HOME is the home directory of the vagrant user)
+  config.vm.provision "file", source: "../../../playbooks/rhel/rhel-9", destination: "$HOME/ckan-ansible/playbooks/rhel/rhel-9"
+  config.vm.provision "file", source: "../../../.env", destination: "$HOME/ckan-ansible/.env"
+  config.vm.provision "file", source: "./setup", destination: "$HOME/setup"
 
   # Disable synced folder (enabled by default, but we don't need it)
   config.vm.synced_folder ".", "/vagrant", disabled: true
@@ -30,6 +33,11 @@ Vagrant.configure("2") do |config|
     vb.name = "rhel9-test"
   end
 
+  # Execute the setup files
+  Dir.glob("./setup/*.sh").sort.each do |script|
+    config.vm.provision "shell", path: script, privileged: false
+  end
+  
   ## Uncomment the following lines to enable provisioning with Ansible. Windows is not supported.
   # config.vm.provision "ansible" do |ansible|
   #   ansible.playbook = "../../../playbooks/rhel/rhel-9/playbook.yml"
