--- a/vagrant/rhel/rhel-9/vagrantfile
+++ b/vagrant/rhel/rhel-9/vagrantfile
@@ -16,10 +16,13 @@ Vagrant.configure("2") do |config|
   config.vm.network "private_network", ip: "192.168.56.20"
   config.vm.hostname = "rhel9-test"
 
-  # Copy the playbook,.env and setup files to the VM ($HOME is the home directory of the vagrant user)
-  config.vm.provision "file", source: "../../../playbooks/rhel/rhel-9", destination: "$HOME/ckan-ansible/playbooks/rhel/rhel-9"
-  config.vm.provision "file", source: "../../../.env", destination: "$HOME/ckan-ansible/.env"
-  config.vm.provision "file", source: "./setup", destination: "$HOME/setup"
+  # Specify the SSH username
+  config.ssh.username = "vagrant"
+
+  # Copy the playbook,.env and setup files to the VM (Update with the correct SSH User if config.ssh.username is different from vagrant)
+  config.vm.synced_folder "../../../playbooks/rhel/rhel-9", "/home/vagrant/ckan-ansible/playbooks/rhel/rhel-9"
+  config.vm.provision "file", source: "../../../.env", destination: "/home/vagrant/.env"
+  config.vm.provision "file", source: "./setup", destination: "/home/vagrant/setup"
 
   # Disable synced folder (enabled by default, but we don't need it)
   config.vm.synced_folder ".", "/vagrant", disabled: true
