--- a/playbooks/rhel/rhel-9/roles/common/tasks/main.yml
+++ b/playbooks/rhel/rhel-9/roles/common/tasks/main.yml
@@ -1,6 +1,17 @@
 
----
-- name: Installing dependencies packages
+
+- name: Install basic dependencies
   include_role:
     name: common
-    tasks_from: dnf.yml
+    tasks_from: common_pkgs.yml
+
+- name: Install Spatial dependencies
+  include_role:
+    name: common
+    tasks_from: common_pkgs_spatial.yml
+
+#TODO: Improve SSH keys deployment
+# - name: SSH keys are installed
+#   include_role:
+#     name: common
+#     tasks_from: common_config_ssh.yml
