--- a/playbooks/rhel/rhel-9/roles/database/tasks/main.yml
+++ b/playbooks/rhel/rhel-9/roles/database/tasks/main.yml
@@ -1,60 +1,15 @@
----
 
-- name: Add PostgreSQL repository
-  dnf:
-    name: https://download.postgresql.org/pub/repos/yum/reporpms/EL-9-x86_64/pgdg-redhat-repo-latest.noarch.rpm
-    state: present
+- name: Install PostgreSQL
+  include_role:
+    name: database
+    tasks_from: database_install_psql.yml
 
-- name: Install PostgreSQL {{ postgres_version }} server
-  dnf:
-    name: postgresql{{ postgres_version }}-server
-    state: present
+- name: Config PostgreSQL database
+  include_role:
+    name: database
+    tasks_from: database_config_psql.yml
 
-- name: Add custom pg_hba file 
-  copy:
-    src: files/pg_hba.conf
-    dest: /var/lib/pgsql/{{ postgres_version }}/data/pg_hba.conf
-    owner: "{{ ckan_database.postgres_user }}"
-    group: "{{ ckan_database.postgres_password }}"
-    mode: 0600
-
-- name: Restart PostgreSQL
-  systemd:
-    name: postgresql-{{ postgres_version }}
-    state: restarted
-
-- name: Create PostgreSQL User ({{ ckan_database.ckan_db_user }})
-  postgresql_user:
-    name: "{{ ckan_database.ckan_db_user }}"
-    password: "{{ ckan_database.ckan_db_password }}"
-    role_attr_flags: SUPERUSER 
-    state: present
-
-- name: Create PostgreSQL database ({{ ckan_database.ckan_db }})
-  postgresql_db:
-    name: "{{ ckan_database.ckan_db }}"
-    owner: "{{ ckan_database.ckan_db_user }}"
-    encoding: UTF-8
-    state: present
-
-- name: Grant database user access to CKAN DB ({{ ckan_database.ckan_db }})
-  postgresql_privs:
-    type: database
-    database: "{{ ckan_database.ckan_db }}"
-    roles: "{{ ckan_database.ckan_db_user }}"
-    grant_option: false
-    privs: all
-
-- name: Create datastore database ({{ ckan_database.datastore_db }}) readonly user
-  postgresql_user:
-    name: "{{ ckan_datastore.datastore_readonly_user }}"
-    password: "{{ ckan_datastore.datastore_readonly_password }}"
-    role_attr_flags: NOSUPERUSER,NOCREATEDB,NOCREATEROLE,INHERIT,LOGIN,NOREPLICATION,NOBYPASSRLS
-    state: present
-
-- name: Create datastore database ({{ ckan_datastore.datastore_db }}) own datastore read user ({{ ckan_datastore.datastore_readonly_user }})
-  postgresql_db:
-    name: "{{ ckan_datastore.datastore_db }}"
-    owner: "{{ ckan_datastore.datastore_readonly_user }}"
-    encoding: UTF-8
-    state: present
+- name: Config CKAN databases
+  include_role:
+    name: database
+    tasks_from: database_config_ckan.yml
