--- a/playbooks/rhel/rhel-9/roles/solr/tasks/main.yml
+++ b/playbooks/rhel/rhel-9/roles/solr/tasks/main.yml
@@ -1,39 +1,34 @@
----
-- name: Install Java
-  apt:
-    name: openjdk-11-jdk
-    state: present
+- name: Create Solr user
+  include_role:
+    name: solr
+    tasks_from: solr_user.yml
 
-- name: Download Solr
-  get_url:
-    url: "https://archive.apache.org/dist/lucene/solr/{{ solr_version }}/solr-{{ solr_version }}.tgz"
-    dest: /tmp/solr-{{ solr_version }}.tgz
+#TODO: Install Solr < 5.
+- name: Install Solr version less than 5
+  include_tasks: solr_install_pre5.yml
+  when: "solr_version.split('.')[0] < '5'"
 
-- name: Extract Solr
-  unarchive:
-    src: /tmp/solr-{{ solr_version }}.tgz
-    dest: /opt/
-    remote_src: yes
+# Install Solr 5+.
+- name: Install Solr version 5 or greater
+  include_tasks: solr_install.yml
+  when: "solr_version.split('.')[0] >= '5'"
 
-- name: Start Solr service
-  command: "/opt/solr-{{ solr_version }}/bin/solr start -p 8983 -force"
-  register: solr_status
-  ignore_errors: true
+- name: Setup Solr service
+  include_role:
+    name: solr
+    tasks_from: solr_service.yml
 
-- name: Create CKAN solr core
-  shell: "/opt/solr-{{ solr_version }}/bin/solr create_core -c {{ ckan_solr_core_name }} -force"
-  args:
-    creates: "/opt/solr-{{ solr_version }}/server/solr/{{ ckan_solr_core_name }}"
+- name: Setup Solr config
+  include_role:
+    name: solr
+    tasks_from: solr_config.yml
 
-- name: Copy CKAN solr schema
-  copy:
-    remote_src: yes
-    src: /usr/lib/ckan/default/src/ckan/ckan/config/solr/schema.xml
-    dest: /opt/solr-{{ solr_version }}/server/solr/{{ ckan_solr_core_name }}/conf/managed-schema
-    owner: root
-    group: root
-    mode: 0644
+- name: Setup CKAN config for Solr
+  include_role:
+    name: solr
+    tasks_from: solr_config_ckan.yml
 
-- name: Restart Solr
-  command: "/opt/solr-{{ solr_version }}/bin/solr {{ 'restart' if solr_status.rc == 0 else 'start' }} -force"
-  ignore_errors: true
+- name: Setup spatial config for Solr
+  include_role:
+    name: solr
+    tasks_from: solr_config_spatial.yml
