Update ansible.cfg and playbook.yml for RHEL 9

--- a/playbooks/rhel/rhel-9/ansible.cfg
+++ b/playbooks/rhel/rhel-9/ansible.cfg
@@ -8,5 +8,5 @@ inventory = ./inventory/host.ini
 hostfile = ./inventory/host.ini
 roles_path = ./roles/common:./roles/ckan:./roles/database:./roles/webserver:./roles/solr:./roles/redis
 retry_files_save_path = ./config/tmp/retry/
-log_path = ./config/tmp/ansible.log
+log_path = ./config/ansible.log
 stdout_callback = yaml
