Update .env.example with CKAN configuration

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@
 
 # CKAN
 CKAN_USER=ckan
+CKAN_DIR=/usr/lib/ckan
+CKAN_STORAGE_PATH=$CKAN_DIR/storage
+CKAN_GIT_URL=https://github.com/ckan/ckan.git
 
 # Host Ports
 SSH_PORT_HOST=8022
