--- a/playbooks/rhel/rhel-9/roles/redis/handlers/main.yml
+++ b/playbooks/rhel/rhel-9/roles/redis/handlers/main.yml
@@ -1,4 +1,4 @@
-- name: start or restart redis-server
+- name: "start or restart: {{ redis_daemon }}"
   service:
-    name: redis-server
+    name: "{{ redis_daemon }}"
     state: restarted
