--- a/playbooks/rhel/rhel-9/roles/ckan/tasks/main.yml
+++ b/playbooks/rhel/rhel-9/roles/ckan/tasks/main.yml
@@ -1,20 +1,38 @@
----
+
 - name: Virtualenv is installed and configured
   include_role:
     name: ckan
-    tasks_from: virtualenv.yml
+    tasks_from: ckan_virtualenv.yml
 
-- name: Installing CKAN
+- name: Install Virtualenv pip constraints
   include_role:
     name: ckan
-    tasks_from: installckan.yml
+    tasks_from: ckan_config_pip_constraints.yml
 
-- name: Install dependency ckan extensions
+- name: Install CKAN
   include_role:
     name: ckan
-    tasks_from: installextension.yml
+    tasks_from: ckan_install_ckan.yml
+
+- name: Install CKAN extensions
+  include_role:
+    name: ckan
+    tasks_from: ckan_install_ckan_exts.yml
 
 - name: Setup CKAN config
   include_role:
     name: ckan
-    tasks_from: ckanconfig.yml
+    tasks_from: ckan_config_ckan.yml
+
+- name: Setup CKAN extensions config
+  include_role:
+    name: ckan
+    tasks_from: ckan_config_exts.yml
+
+- name: "Change owner and group of {{ ckan_dir }}/default to: {{ lookup('env','USER') }}"
+  file:
+    path: "{{ ckan_dir }}/default"
+    owner: "{{ lookup('env','USER') }}"
+    group: "{{ lookup('env','USER') }}"
+    recurse: yes
+  become: true
