--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-#Keep the same values in the .env file and the .env.example file /ckan-ansibles/$ANSIBLE_PLAYBOOK_OS/host_vars/.
+#Keep the same values in the .env file and the .env.example file /ckan-ansibles/host_vars/.
 
 # CKAN
 CKAN_USER=ckan
@@ -15,12 +15,13 @@ NGINX_SSLPORT_HOST=8043
 # Test deployment
 # Ansible
 ANSIBLE_DIR=/opt
-# Set the OS to test based on the available Dockerfiles: rhel, suse, debian, ubuntu
-ANSIBLE_PLAYBOOK_OS=suse
-ANSIBLE_CONFIG=$HOME/ckan-ansibles/$ANSIBLE_PLAYBOOK_OS/ansible.cfg
+ANSIBLE_CONFIG=$HOME/ckan-ansibles/playbook/ansible.cfg
 
 # Containers
 CONTAINER_OS_NAME=rhel-test
+## Docker Compose OS container
+CONTAINER_OS=rhel
+CONTAINER_OS_VERSION=8
 
 # Container Ports
 SSH_PORT=22
