--- a/docker/ubuntu/ubuntu-24/Dockerfile
+++ b/docker/ubuntu/ubuntu-24/Dockerfile
@@ -20,6 +20,8 @@ RUN echo 'APT::Install-Suggests "0";' >> /etc/apt/apt.conf.d/00-docker && \
     # Python dependencies
     python3 python3-pip libpq-dev && \
     apt-get clean && \
+    # Update pip
+    pip3 install --upgrade pip && \
     # Install Ansible
     pip3 install --no-cache-dir virtualenv && \
     pip3 install --no-cache-dir ansible && \
@@ -42,10 +44,11 @@ RUN mkdir /var/run/sshd && \
     ssh-keygen -A
 
 # Copy the public key
-COPY docker/ssh/keys/ssh.pub /home/ckan/.ssh/authorized_keys
-
-RUN chown ckan:ckan /home/ckan/.ssh/authorized_keys && \
-    chmod 600 /home/ckan/.ssh/authorized_keys
+RUN if [ -f .ssh/keys/ssh.pub ]; then \
+    cp .ssh/keys/ssh.pub /home/ckan/.ssh/authorized_keys && \
+    chown ckan:ckan /home/ckan/.ssh/authorized_keys && \
+    chmod 600 /home/ckan/.ssh/authorized_keys; \
+fi
 
 EXPOSE ${CKAN_PORT} ${SSH_PORT} ${NGINX_PORT}
 
