Update Dockerfiles to use latest UBI images for RHEL 8 and RHEL 9

--- a/docker/rhel/rhel-9/Dockerfile
+++ b/docker/rhel/rhel-9/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.access.redhat.com/ubi9/ubi:9.3
+FROM registry.access.redhat.com/ubi9/ubi:latest
 LABEL maintainer="mjanez" \
       name="ckan-ansible" \
       version="rhel-9"
